<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".CrimeListFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar_layout">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleCentered="true"
            android:fitsSystemWindows="true"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            app:title="@string/app_name"
            app:menu="@menu/fragment_crime_detail"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Note: A RecyclerView can also be used -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginEnd="16dp">
                    <ImageView
                        android:id="@+id/crime_photo"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="centerInside"
                        android:cropToPadding="true"
                        android:background="@color/black"
                        android:contentDescription="@string/crime_photo_no_image_description"/>
                    <ImageButton
                        android:id="@+id/crime_camera"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_camera"
                        android:contentDescription="@string/crime_photo_button_description"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/crime_title_label"
                        android:textAppearance="?attr/textAppearanceHeadline5" />

                    <EditText
                        android:id="@+id/crime_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/crime_title_hint"
                        android:importantForAutofill="no"
                        android:inputType="text" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:text="@string/crime_details_label"
                />

            <TextView
                android:id="@+id/crime_date_label"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_date_text"
                android:labelFor="@+id/crime_date"/>
            <Button
                android:id="@+id/crime_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Wed May 11 11:56 EST 2022"
                />

            <Button
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                tools:text="11:56"
                />

            <CheckBox
                android:id="@+id/crime_solved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crime_solved_label"
                />

            <TextView
                android:id="@+id/crime_suspect_label"
                android:layout_width="match_parent"
                android:textSize="17sp"
                android:layout_height="wrap_content"
                android:text="@string/crime_suspect_text"
                android:labelFor="@+id/crime_suspect"/>
            <Button
                android:id="@+id/crime_suspect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crime_suspect_text"/>

            <TextView
                android:id="@+id/crime_report_label"
                android:layout_width="match_parent"
                android:textSize="17sp"
                android:layout_height="wrap_content"
                android:text="@string/crime_report_text"
                android:labelFor="@+id/crime_report"/>
            <Button
                android:id="@+id/crime_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crime_report_text"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>